<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.phum.shopifymobilechallenge.MainActivity">

    <TextView
        android:id="@+id/challengeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="24dp"
        android:text="@string/challengeTitleText"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/findTotalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text="@string/findTotalTitleText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/totalFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/findFirstNameHint"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/totalLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/findLastNameHint"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="true" />
        </LinearLayout>

        <Button
            android:id="@+id/findTotalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:editable="false"
            android:padding="0dp"
            android:text="@string/findTotalButtonText"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/totalSpentResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/totalCaptionText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalItemsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text="@string/totalItemsTitleText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/itemNameHint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/itemsSoldButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:editable="false"
            android:padding="0dp"
            android:text="@string/itemsSoldButtonText"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/numItemsResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/totalItemsText"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
